--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,34 +1,20 @@
-name: Java CI with Maven
+name: Java CI
 
 on:
   push:
     branches: [ master ]
   pull_request:
     branches: [ master ]
-	
+
 jobs:
 
-  compile:
+  build:
     runs-on: ubuntu-latest
-    name: Running Java ${{ matrix.java }} compile
-    steps:
-    - uses: actions/checkout@v2
-    - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
-      with:
-        java-version: 1.8
-    - name: Compile code
-      run: mvn compile
-	  
-  test:
-    runs-on: ubuntu-latest
-    name: Running tests
-    needs: compile
     steps:
       - uses: actions/checkout@v2
-      - name: Set up JDK 1.8
+      - name: Set up JDK 11
         uses: actions/setup-java@v1
         with:
-          java-version: 1.8
-      - name: Run unit tests
-        run: mvn test
+          java-version: 11
+      - name: Build with Maven
+        run: mvn -B test package --file pom.xml
