--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -8,8 +8,33 @@ on:
 
 jobs:
 
+  compile:
+    runs-on: ubuntu-latest
+    name: Running Java ${{ matrix.java }} compile
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up JDK 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11
+      - name: Compile code
+        run: mvn compile
+
+  test:
+    runs-on: ubuntu-latest
+    needs: compile
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up JDK 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11
+      - name: Run unit tests
+        run: mvn test
+
   build:
     runs-on: ubuntu-latest
+    needs: test
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 11
@@ -17,4 +42,4 @@ jobs:
         with:
           java-version: 11
       - name: Build with Maven
-        run: mvn -B test package --file pom.xml
+        run: mvn -B package --file pom.xml -Dmaven.test.skip=true
