--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -10,7 +10,7 @@ jobs:
 
   compile:
     runs-on: ubuntu-latest
-    name: Running Java ${{ matrix.java }} compile
+    name: Running Java compile
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 11
@@ -22,6 +22,7 @@ jobs:
 
   test:
     runs-on: ubuntu-latest
+    name: Running tests
     needs: compile
     steps:
       - uses: actions/checkout@v2
@@ -34,6 +35,7 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
+    name: Run mvn build
     needs: test
     steps:
       - uses: actions/checkout@v2
